RESOLVED FIXED296168
REGRESSION (iOS 26): Occasionally can't scroll or refresh a webpage after navigating back
https://bugs.webkit.org/show_bug.cgi?id=296168
Summary REGRESSION (iOS 26): Occasionally can't scroll or refresh a webpage after nav...
Aditya Keerthi
Reported 2025-07-17 22:47:46 PDT
Attachments
Aditya Keerthi
Comment 1 2025-07-17 23:11:50 PDT
EWS
Comment 2 2025-07-18 11:11:55 PDT
Committed 297603@main (641034aef871): <https://commits.webkit.org/297603@main> Reviewed commits have been landed. Closing PR #48225 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.