Source/WebKit/UIProcess/ios/ViewGestureControllerIOS.mm
@@ -108,6 +108,9 @@ static const float swipeSnapshotRemovalRenderTreeSizeTargetFraction = 0.5;
 
 - (BOOL)shouldBeginInteractiveTransition:(_UINavigationInteractiveTransitionBase *)transition
 {
+    if (_gestureController->hasActiveSwipeGesture())
+        return NO;
+
     using enum WebKit::ViewGestureController::DeferToConflictingGestures;
     auto deferToConflictingGestures = transition.gestureRecognizer.state == UIGestureRecognizerStateFailed ? Yes : No;
     return _gestureController->canSwipeInDirection([self directionForTransition:transition], deferToConflictingGestures);
